SSG-3123: Fix for Gateway utilities should exclude optional Java packages
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26027 219f1c6e-4a0e-43c8-96f2-6e749be13fd4